# nicegui-stellarium

./: README.md  pyproject.toml
.github/: copilot-instructions.md
stellarium_widget/: __init__.py  scripts.py  stellarium_bridge.py  stellarium_init.js  stellarium_widget.py
